src/core-crm/objects/Related_Product_Request__c/Related_Product_Request__c.object-meta.xml
<CustomObject>
    <label>Related Product Request</label>
    <nameField>
        <label>Related Product Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Product Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>