src/core-crm/objects/Related_Product_Request__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Related Product Requests</relationshipLabel>
    <relationshipName>Course</relationshipName>
    <type>Lookup</type>
</CustomField>