src/core-crm/objects/Related_Product_Request__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>This will capture the course name related to the program</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>