src/core-crm/objects/Related_Product_Request__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Related Product Requests</relationshipLabel>
    <relationshipName>Program</relationshipName>
    <type>Lookup</type>
</CustomField>